--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -200,7 +200,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hint="Religion"
+                        app:ms_hintColor="#F2146E"
+                        app:ms_hintTextSize="16dp"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -230,7 +232,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hint="Caste"
+                        app:ms_hintColor="#F2146E"
+                        app:ms_hintTextSize="16dp"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -260,7 +264,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hint="Mother Tongue"
+                        app:ms_hintColor="#F2146E"
+                        app:ms_hintTextSize="16dp"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
