--- a/app/src/main/res/layout/tab_home.xml
+++ b/app/src/main/res/layout/tab_home.xml
@@ -13,28 +13,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="9"
+
         android:layout_marginTop="10dp"
         android:background="#FFFFFF">
-
+        <!--  android:weightSum="9"-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_height="wrap_content"
+
         android:orientation="vertical"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp">
-
+<!--        android:layout_weight="5"-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+
             android:weightSum="4"
             android:orientation="horizontal"
             android:layout_marginBottom="19dp">
-
+<!--android:layout_weight="1"-->
             <RadioGroup
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -65,13 +65,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
+                android:weightSum="3"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.75"
                     android:text="Age"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
@@ -83,7 +84,7 @@
                     android:id="@+id/et_age_from"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="0.75"
                     android:background="@drawable/border_home_age"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
@@ -91,17 +92,19 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textStyle="bold"
+                    android:inputType="number"
                     />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.75"
                     android:text="To"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
                     android:layout_gravity="center"
                     android:gravity="center"
+
                     android:textStyle="bold"
                     />
 
@@ -109,7 +112,7 @@
                     android:id="@+id/et_age_to"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="0.75"
                     android:background="@drawable/border_home_age"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
@@ -117,6 +120,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textStyle="bold"
+                    android:inputType="number"
                     />
 
 
@@ -125,8 +129,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+
             android:orientation="horizontal"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
@@ -134,7 +138,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginBottom="19dp"
             android:background="@drawable/home_spinner_border">
-
+<!--        android:layout_weight="1"-->
 
             <fr.ganfra.materialspinner.MaterialSpinner
                 android:id="@+id/sp_home_religion"
@@ -151,7 +155,8 @@
                 app:ms_errorColor="#FFFFFF"
                 app:ms_typeface="fonts/Roboto-Regular.ttf"
                 app:ms_hint="Religion"
-                app:ms_hintTextSize="16px"
+                app:ms_hintTextSize="16dp"
+                app:ms_hintColor="#F2146E"
                 app:ms_multiline="false"
                 app:ms_thickness="0.5dp"
                 android:popupBackground="#e6e6e6"
@@ -160,8 +165,8 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+
             android:orientation="horizontal"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
@@ -169,7 +174,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginBottom="19dp"
             android:background="@drawable/home_spinner_border">
-
+<!--android:layout_weight="1"-->
 
             <fr.ganfra.materialspinner.MaterialSpinner
                 android:id="@+id/sp_home_caste"
@@ -186,7 +191,8 @@
                 app:ms_errorColor="#FFFFFF"
                 app:ms_hint="Caste"
                 app:ms_typeface="fonts/Roboto-Regular.ttf"
-                app:ms_hintTextSize="16px"
+                app:ms_hintTextSize="16dp"
+                app:ms_hintColor="#F2146E"
                 app:ms_multiline="false"
                 app:ms_thickness="0.5dp"
                 android:popupBackground="#e6e6e6"
@@ -195,10 +201,11 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+
             android:orientation="horizontal"
             android:weightSum="3">
+            <!-- android:layout_weight="1"-->
             <Button
 
                 android:layout_width="0dp"
@@ -252,23 +259,25 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_prof_matches"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="wrap_content"
+
         android:background="@drawable/home_spinner_border"
         android:layout_marginTop="50dp">
 
     </android.support.v7.widget.RecyclerView>
-
+<!--   android:layout_weight="2"-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_prof_highlight"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/home_spinner_border"
-        android:layout_weight="2"
+
         android:layout_marginTop="50dp">
 
     </android.support.v7.widget.RecyclerView>
+
+        <!--    android:layout_weight="2"-->
     </LinearLayout>
     </ScrollView>
 </LinearLayout>
