--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -631,8 +631,8 @@
                         android:background="@drawable/border">
 
                         <fr.ganfra.materialspinner.MaterialSpinner
-                            android:id="@+id/sp_lakh"
-                            android:layout_width="0dp"
+                            android:id="@+id/sp_currency"
+                            android:layout_width="match_parent"
                             android:layout_weight="1"
                             android:layout_height="match_parent"
                             android:layout_marginRight="25dp"
@@ -659,28 +659,21 @@
                             android:orientation="vertical"
                             android:layout_weight="1"
                             android:background="@drawable/border">
-                        <fr.ganfra.materialspinner.MaterialSpinner
-                            android:id="@+id/sp_thousand"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="match_parent"
-                            android:layout_marginRight="25dp"
-                            android:layout_marginEnd="25dp"
-                            app:ms_alignLabels="false"
-                            app:ms_arrowColor="#FFFFFF"
-                            app:ms_arrowSize="20dp"
-                            app:ms_baseColor="#00000000"
-                            app:ms_enableErrorLabel="false"
-                            app:ms_enableFloatingLabel="false"
-                            app:ms_errorColor="#FFFFFF"
-                            app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
-                            app:ms_multiline="false"
-                            app:ms_thickness="0.5dp"
-                            android:popupBackground="#e6e6e6"
-                            android:popupElevation="@dimen/floating_label_bottom_spacing"
-                            />
-                    </LinearLayout>
+                            <EditText
+                                android:id="@+id/edt_income"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:hint="Income"
+                                android:textColorHint="#FFFFFF"
+                                android:background="#00000000"
+                                android:layout_gravity="center_horizontal"
+                                android:fontFamily="Roboto-Regular"
+                                android:textSize="16dp"
+                                android:padding="10dp"
+                                android:textColor="#ffffff"
+                                />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
