--- a/app/src/main/res/layout/row_list_home_profiles.xml
+++ b/app/src/main/res/layout/row_list_home_profiles.xml
@@ -4,31 +4,37 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="#00000000"
     >
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:weightSum="2"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginRight="31dp"
+                android:layout_marginEnd="31dp"
+                android:background="#00000000">
 
 
                 <ImageView
                     android:id="@+id/img_row_logo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_height="0dp"
-                    android:layout_weight="1.80"
+                    android:layout_height="100dp"
                     android:contentDescription="@string/app_name"
                     android:src="@mipmap/iconintrested"
-                    android:scaleType="centerCrop"/>
+                    android:scaleType="centerCrop"
+                    android:background="@drawable/home_photo_border"
+                    />
 
                 <TextView
                     android:id="@+id/tv_row_member_type"
                     android:layout_width="match_parent"
-                    android:layout_weight="0.20"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="17dp"
                     android:gravity="center"
                     android:text="Bride"
                     android:textStyle="bold"
