--- a/app/src/main/res/layout/tab_home.xml
+++ b/app/src/main/res/layout/tab_home.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginBottom="150dp"
 >
     <ScrollView
         android:layout_width="match_parent"
@@ -202,9 +203,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="horizontal"
-            android:weightSum="3">
+            android:weightSum="3"
+            android:layout_marginBottom="17dp">
             <!-- android:layout_weight="1"-->
             <Button
 
@@ -235,7 +236,8 @@
                 android:textAllCaps="false"
                 android:fontFamily="Roboto-Medium"
                 android:textSize="18sp"
-                android:textColor="#F2146E" />
+                android:textColor="#F2146E"
+               />
 
             <Button
 
@@ -256,28 +258,65 @@
         </LinearLayout>
         </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_prof_matches"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="#19000000">
 
-        android:background="@drawable/home_spinner_border"
-        android:layout_marginTop="50dp">
+            <TextView
+                android:id="@+id/tv_row_title1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="17dp"
+                android:layout_marginBottom="17dp"
+                android:gravity="center"
+                android:text="Your Profile Matches"
+                android:textColor="#323334"
+                android:fontFamily="Roboto-Regular"
+                android:textSize="18sp"
+                />
 
-    </android.support.v7.widget.RecyclerView>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_prof_matches"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:background="#00000000">
+
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
 <!--   android:layout_weight="2"-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="70dp">
+
+            <TextView
+                android:id="@+id/tv_row_title2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="17dp"
+                android:layout_marginBottom="17dp"
+                android:gravity="center"
+                android:text="Highlighted Profiles"
+                android:textColor="#323334"
+                android:fontFamily="Roboto-Regular"
+                android:textSize="18sp"
+                />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_prof_highlight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/home_spinner_border"
-
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="0dp">
 
     </android.support.v7.widget.RecyclerView>
 
         <!--    android:layout_weight="2"-->
+        </LinearLayout>
     </LinearLayout>
     </ScrollView>
 </LinearLayout>
