--- a/app/src/main/res/layout/tab_who_shortlisted.xml
+++ b/app/src/main/res/layout/tab_who_shortlisted.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#e6e6e6">
+    android:background="#e6e6e6"
+    android:layout_marginBottom="100dp">
 
 
     <android.support.v7.widget.RecyclerView
