--- a/app/src/main/res/layout/tab_my_profile.xml
+++ b/app/src/main/res/layout/tab_my_profile.xml
@@ -15,6 +15,7 @@ android:background="#ffffff"
         android:layout_marginStart="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginEnd="15dp"
+        android:fillViewport="true"
         android:layout_marginBottom="70dp"
         android:background="#00000000">
 
