--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -6,7 +6,7 @@
 
         <item
             android:id="@+id/menu_go_home"
-            android:checkable="false"
+            android:checkable="true"
             android:icon="@mipmap/iconhome"
             android:title="@string/menu_home" />
 
