--- a/app/src/main/res/layout/activity_tab_view_parent.xml
+++ b/app/src/main/res/layout/activity_tab_view_parent.xml
@@ -43,6 +43,13 @@
 
             />
 
+      <!--  <FrameLayout
+            android:id="@+id/Container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar_main"
+            android:background="#000000"
+            android:visibility="invisible"/>-->
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
@@ -55,6 +62,7 @@
         app:itemIconTint="@color/state_list"
         app:itemTextColor="@color/state_list"
         />
+
 
 
 </android.support.v4.widget.DrawerLayout>
