details page-hints,working

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -245,7 +245,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hintTextSize="16sp"
+                        app:ms_hint="Country"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -275,7 +277,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hintTextSize="16sp"
+                        app:ms_hint="State"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -305,7 +309,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hintTextSize="16sp"
+                        app:ms_hint="City"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -366,7 +372,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hintTextSize="16sp"
+                        app:ms_hint="Height"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -396,7 +404,9 @@
             app:ms_enableFloatingLabel="false"
             app:ms_errorColor="#FFFFFF"
             app:ms_typeface="fonts/Roboto-Regular.ttf"
-            app:ms_hintTextSize="16px"
+            app:ms_hintTextSize="16sp"
+            app:ms_hint="Weight"
+            app:ms_hintColor="#F2146E"
             app:ms_multiline="false"
             app:ms_thickness="0.5dp"
             android:popupBackground="#e6e6e6"
@@ -548,7 +558,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Education"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
@@ -578,7 +590,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Occupation"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
@@ -645,7 +659,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Currency"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
